--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 100%;
   background: #2f3035;
-  border: 1px solid rgba(235, 236, 240, 0.2);
+  border: none;
   border-radius: 0.5rem;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.125em;
